--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,13 +14,22 @@
         "no-prototype-builtins":"off",
         "global-require":"off",
         "no-restricted-syntax":"off",
+        "max-len":"warn",
+        "consistent-return":"off",
+        "no-param-reassign": "warn",
+        "class-methods-use-this":"off",
 
-        "linebreak-style":["error", "windows"],
+        "linebreak-style":"off",
         "jsx-a11y/no-static-element-interactions": "warn",
+        "jsx-a11y/img-has-alt":"warn",
+        "jsx-a11y/label-has-for": "warn",
+
         "react/jsx-indent": [2, 4],
+        "react/jsx-indent-props": [2, 4],
         "react/react-in-jsx-scope": "off",
         "react/prop-types": "warn",
         "react/jsx-filename-extension":"off",
+        "react/no-multi-comp":"off",
 
         "import/no-dynamic-require":"warn",
         "import/no-unresolved":"warn",
