--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 node_modules
 dist
 .idea/
+
+doc/*
+!doc/*.zip
+!doc/*.rar
+!doc/*.7z
+
+trunk/doc/*
+!trunk/doc/*.zip
+!trunk/doc/*.rar
+!trunk/doc/*.7z
