--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.6",
   "dependencies": {
-    "rc-queue-anim": "^1.4.1"
+    "rc-queue-anim": "^1.4.1",
+    "react-day-picker": "^7.0.5"
   }
 }
