--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "version": "1.1.0",
+  "version": "1.2.0",
   "dependencies": {
     "rc-queue-anim": "^1.4.1",
-    "react-day-picker": "^7.0.5"
+    "react-day-picker": "^7.0.5",
+    "react-virtualized": "^9.20.1"
   }
 }
