--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "version": "1.1.1",
   "dependencies": {
-    "rc-queue-anim": "^1.4.1",
-    "react-day-picker": "^7.0.5"
+    "memoize-one": "^4.0.0",
+    "rc-calendar": "^9.6.2",
+    "rc-queue-anim": "^1.4.1"
   }
 }
