--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "memoize-one": "^4.0.0",
     "rc-calendar": "^9.6.2",
-    "rc-queue-anim": "^1.4.1"
+    "rc-checkbox": "^2.1.5",
+    "rc-queue-anim": "^1.4.1",
+    "rc-switch": "^1.7.0"
   }
 }
